<resources>
    <string name="app_name">DesafioFirebase</string>
    <string name="splash_image">Splash image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="insert_name">Insert name</string>
    <string name="insert_email">Insert email</string>
    <string name="password_cannot_be_null">Password cannot be null</string>
    <string name="must_contain_at_least_6_characters">Must contain at least 6 characters</string>
    <string name="must_be_the_same_as_password">Must be the same password</string>
    <string name="validate_your_email">Validate your email</string>
    <string name="insert_password">Insert password</string>
    <string name="an_error_has_occurred_check_email_and_password">An error has occurred check emai and password]</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="game_image">Game image</string>
    <string name="new_game_button">New game button</string>
    <string name="description">Description</string>
    <string name="created_at">Created at</string>
    <string name="save_game">Save game</string>
    <string name="game_photo">Game photo</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="created_at_cannot_be_empty">Created at cannot be empty</string>
    <string name="description_cannot_be_empty">Description cannot be empty</string>
    <string name="search">Search</string>
</resources>