<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".games.view.GameRegisterFragment"
    android:background="@drawable/wallpaper">

    <RelativeLayout
        android:id="@+id/rlCardRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_150dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="@dimen/dimen_10dp"
                app:cardCornerRadius="@dimen/dimen_10dp"
                >
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/dimen_10dp"
                    android:layout_marginTop="@dimen/dimen_50dp">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtGameNameRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/dimen_10dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:hint="@string/name">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtGameNameRegister"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtCreateAtRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/created_at"
                        android:layout_marginVertical="@dimen/dimen_10dp"
                        app:layout_constraintTop_toBottomOf="@id/txtGameNameRegister"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtCreateAtRegister"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtDescriptionRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"
                        android:layout_marginVertical="@dimen/dimen_10dp"
                        app:layout_constraintTop_toBottomOf="@id/txtCreateAtRegister"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtDescriptionRegister"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dimen_150dp"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnSaveGame"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorRed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txtDescriptionRegister"
                        android:text="@string/save_game"
                        android:layout_marginVertical="@dimen/dimen_10dp"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>

    <View
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="@dimen/dimen_150dp"
        android:layout_height="@dimen/dimen_150dp"
        android:layout_marginTop="@dimen/dimen_180dp"
        android:background="@drawable/circle_shape"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/rlCardRegister"/>

    <ImageView
        android:id="@+id/imgRegister"
        android:layout_width="@dimen/dimen_60dp"
        android:layout_height="@dimen/dimen_60dp"
        android:src="@drawable/ic_baseline_camera_alt_24"
        android:scaleType="fitXY"
        android:contentDescription="@string/game_photo"
        android:layout_marginTop="@dimen/dimen_180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/rlCardRegister"
        app:tint="@color/colorWhite" />

<!--    <com.google.android.material.card.MaterialCardView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        android:layout_margin="@dimen/dimen_10dp"-->
<!--        app:cardCornerRadius="@dimen/dimen_10dp"-->
<!--        >-->
<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_marginHorizontal="@dimen/dimen_10dp">-->

<!--            <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--                android:id="@+id/btnGamePicture"-->
<!--                android:layout_width="@dimen/dimen_150dp"-->
<!--                android:layout_height="@dimen/dimen_150dp"-->
<!--                android:layout_margin="16dp"-->
<!--                android:backgroundTint="@color/colorRed"-->
<!--                android:contentDescription="@string/new_game_button"-->
<!--                android:tint="@color/colorWhite"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintBottom_toTopOf="@id/txtGameNameRegister"-->
<!--                app:srcCompat="@drawable/ic_baseline_camera_alt_24"-->
<!--                tools:layout_editor_absoluteY="16dp" />-->

<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:id="@+id/txtGameNameRegister"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginVertical="@dimen/dimen_10dp"-->
<!--                app:layout_constraintTop_toBottomOf="@id/btnGamePicture"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                android:hint="@string/name">-->
<!--                <com.google.android.material.textfield.TextInputEditText-->
<!--                    android:id="@+id/edtGameNameRegister"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    />-->
<!--            </com.google.android.material.textfield.TextInputLayout>-->

<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:id="@+id/txtCreateAtRegister"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:hint="@string/created_at"-->
<!--                android:layout_marginVertical="@dimen/dimen_10dp"-->
<!--                app:layout_constraintTop_toBottomOf="@id/txtGameNameRegister"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent">-->
<!--                <com.google.android.material.textfield.TextInputEditText-->
<!--                    android:id="@+id/edtCreateAtRegister"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    />-->
<!--            </com.google.android.material.textfield.TextInputLayout>-->

<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:id="@+id/txtDescriptionRegister"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:hint="@string/description"-->
<!--                android:layout_marginVertical="@dimen/dimen_10dp"-->
<!--                app:layout_constraintTop_toBottomOf="@id/txtCreateAtRegister"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent">-->
<!--                <com.google.android.material.textfield.TextInputEditText-->
<!--                    android:id="@+id/edtDescriptionRegister"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="@dimen/dimen_150dp"-->
<!--                    />-->
<!--            </com.google.android.material.textfield.TextInputLayout>-->

<!--            <Button-->
<!--                android:id="@+id/btnSaveGame"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:backgroundTint="@color/colorRed"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@id/txtDescriptionRegister"-->
<!--                android:text="@string/save_game"-->
<!--                android:layout_marginVertical="@dimen/dimen_10dp"-->
<!--                />-->
<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
<!--    </com.google.android.material.card.MaterialCardView>-->

</androidx.constraintlayout.widget.ConstraintLayout>